fixed close button ugliness (overlap) on smaller screens

--- a/src/app/board/icon-button.component.scss
+++ b/src/app/board/icon-button.component.scss
@@ -1,19 +1,14 @@
 .icon-container {
   display: flex;
   justify-content: center;
-  padding: 12px 33px;
   background-color: rgba(255, 255, 255, 0.692);
-
   border-radius: 1000px;
-  width: 22px;
-  // height: 30px;
 
   &:hover {
     cursor: pointer;
 
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     transition: all 0.2s ease-in-out;
-    // background-color: rgba(0, 0, 0, 0.918);
     background-color: rgb(0, 0, 0);
 
     .icon {
@@ -22,8 +17,6 @@
   }
 
   .icon {
-    font-size: 60px;
-    margin-top: 3px;
     color: rgba(0, 0, 0, 0.651);
   }
 }
